[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theendisnever"
version = "0.6.0"
authors = [
  { name="Andrew Hinh", email="ajhinh@gmail.com" },
]
description = "A package to easily make an LLM talk with itself for eternity."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andrewhinh/theendisnever"
"Bug Tracker" = "https://github.com/andrewhinh/theendisnever/issues"