[build-system]
requires = [
  "setuptools>=61.0",
  "torch>=2.0.0",
  "transformers>=4.0.0",

]
build-backend = "setuptools.build_meta"

[project]
name = "theendisnever"
version = "1.1.0"
authors = [
  { name="Andrew Hinh", email="ajhinh@gmail.com" },
]
description = "A package to easily make an LLM talk with itself for eternity."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andrewhinh/theendisnever"
"Bug Tracker" = "https://github.com/andrewhinh/theendisnever/issues"